--- a/index.html
+++ b/index.html
@@ -162,197 +162,57 @@
               <p> We propose to recurrently discover the 3D attention regions and use the reinforcement learning for optimization. </p>
             </td>
           </tr>
-
-          <tr>
+	  
+	  
+	  <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/faceSR.png' alt="dise">
+              <img style="width:100%;max-width:100%" src='images/tip19.jpg' alt="dise">
             </td>
             <td width="75%" valign="center">
-              <papertitle>Deep Face Super-Resolution with Iterative Collaboration between Attentive Recovery and Landmark Estimation</papertitle>
+              <papertitle>Spatial-Temporal Attention-aware Learning for Video-based Person Re-identification</papertitle>
               <br>
-              Cheng Ma,  Zhenyu Jiang, <strong>Yongming Rao</strong>, Jiwen Lu, Jie Zhou
+              <strong>Guangyi Chen</strong>, Jiwen Lu, Ming Yang, and Jie Zhou
               <br>
-              <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2020
+              <em>IEEE Transactions on Image Processing< (<strong>TIP</strong>)</em>, 2019
               <br>
-              <a href="https://arxiv.org/abs/2003.13063">[arXiv]</a> <a href="https://github.com/Maclory/Deep-Iterative-Collaboration">[Code]</a> 
+              <a href="https://guangyichen.github.io/files/TIP-19329-2018.R2.pdf">[PDF]</a> 
               <br>
-              <p> We propose a deep face super-resolution method with iterative collaboration between two recurrent networks which focus on facial image recovery and landmark estimation respectively </p>
+              <p> We propose a spatial-temporal attention to jointly discover the salient clues in both spatial and temporal domain. </p>
+            </td>
+          </tr>
+	
+	  <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src='images/ICIP17.jpg.jpg' alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification</papertitle>
+              <br>
+             <strong>Guangyi Chen</strong>, Jiwen Lu, Jianjiang Feng, and Jie Zhou
+              <br>
+              <em>IEEE International Conference on Image Processing< (<strong>ICIP</strong>)</em>, 2017
+              <br>
+              <a href="https://guangyichen.github.io/files/Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification.pdf">[PDF]</a> 
+              <br>
+              <p> We model each pedestrian video as a point on the Riemannian manifold and learn similarity over these points under the multiple kernel learning framework. </p>
             </td>
           </tr>
 
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/SFCNN.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Spherical Fractal Convolution Neural Networks for Point Cloud Recognition</papertitle>
-              <br>
-              <strong>Yongming Rao</strong>, Jiwen Lu, Jie Zhou
-              <br>
-              <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2019
-              <br>
-              <a href="https://raoyongming.github.io/files/SFCNN.pdf">[PDF]</a> <a href="https://raoyongming.github.io/files/SFCNN_supplement.pdf">[Supplement]</a> 
-              <br>
-              <p> We designed Spherical Fractal Convolution Neural Networks (SFCNN) for rotation-invariant point cloud feature learning. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/COIN.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>COIN: A Large-scale Dataset for Comprehensive Instructional Video Analysis</papertitle>
-              <br>
-              Yansong Tang, Dajun Ding, <strong>Yongming Rao</strong>, Yu Zheng, Danyang Zhang, Lili Zhao, Jiwen Lu, Jie Zhou
-              <br>
-              <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2019
-              <br>
-              <a href="https://arxiv.org/abs/1903.02874">[arXiv]</a>  <a href="https://coin-dataset.github.io/">[Project Page]</a>  <a href="https://github.com/coin-dataset/annotation-tool">[Annotation Tool]</a> 
-              <br>
-              <p> COIN is the largest and most comprehensive instructional video analysis dataset with rich annotations. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/RNR.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Runtime Network Routing for Efficient Image Classification</papertitle>
-              <br>
-              <strong>Yongming Rao</strong>,  Jiwen Lu, Ji Lin, Jie Zhou
-              <br>
-              <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong>T-PAMI</strong>, IF: 17.73)</em>, 2019
-              <br>
-              <a href="https://raoyongming.github.io/files/pami18.pdf">[PDF]</a> <a href="https://raoyongming.github.io/files/RNR.pytorch_release.zip">[Code]</a>
-              <br>
-              <p> We propose a generic Runtime Network Routing (RNR) framework for efficient image classification, which selects an optimal path inside the network. Our method can be applied to off-the-shelf neural network structures and
-                easily extended to various application scenarios. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%"  src='images/IJCV_DAN.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Learning Discriminative Aggregation Network for Video-based Face Recognition and Person Re-identification</papertitle>
-              <br>
-              <strong>Yongming Rao</strong>,  Jiwen Lu, Jie Zhou
-              <br>
-              <em>International Journal of Computer Vision (<strong>IJCV</strong>, IF: 6.07)</em>, 2019
-              <br>
-              <a href="https://raoyongming.github.io/files/IJCV_DAN.pdf">[PDF]</a> <a href="https://raoyongming.github.io/files/DAN.py">[Code]</a>
-              <br>
-              <p> We propose a discriminative aggregation network (DAN) method for video-based face recognition and person re-identification, which aims to integrate
-                information from video frames for feature representation effectively and efficiently. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/GODet.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Learning Globally Optimized Object Detector via Policy Gradient</papertitle>
-              <br>
-              <strong>Yongming Rao</strong>, Dahua Lin, Jiwen Lu, Jie Zhou
-              <br>
-              <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2018
-              <br>
-              <font color="red"><strong>Spotlight Presentation</strong></font>
-              <br>
-              <a href="http://openaccess.thecvf.com/content_cvpr_2018/CameraReady/2657.pdf">[PDF]</a> <a href="https://raoyongming.github.io/files/cvpr18_supplement.pdf">[Supplement]</a>
-              <br>
-              <p> We propose a simple yet effective method to learn globally optimized detector for object detection by directly optimizing mAP using the REINFORCE algorithm. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/RNP.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Runtime Neural Pruning</papertitle>
-              <br>
-              Ji Lin*, <strong>Yongming Rao*</strong>, Jiwen Lu, Jie Zhou
-              <br>
-              <em>Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>)</em>, 2017
-              <br>
-              <a href="https://papers.nips.cc/paper/6813-runtime-neural-pruning.pdf">[PDF]</a> <a href="https://raoyongming.github.io/files/RNR.pytorch_release.zip">[Code]</a>
-              <br>
-              <p> We propose a Runtime Neural Pruning (RNP) framework which prunes the deep neural network dynamically at the runtime. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/DAN.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Learning Discriminative Aggregation Network for Video-Based Face Recognition</papertitle>
-              <br>
-              <strong>Yongming Rao</strong>, Ji Lin, Jiwen Lu, Jie Zhou
-              <br>
-              <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2017
-              <br>
-              <font color="red"><strong>Spotlight Presentation</strong></font>
-              <br>
-              <a href="http://openaccess.thecvf.com/content_ICCV_2017/papers/Rao_Learning_Discriminative_Aggregation_ICCV_2017_paper.pdf">[PDF]</a>  <a href="https://raoyongming.github.io/files/DAN.py">[Code]</a> <a href="https://raoyongming.github.io/files/dan_supplement.pdf">[Supplement]</a>
-              <br>
-              <p> We propose a discriminative aggregation network (DAN) method for video face recognition, which aims to integrate information from video frames effectively and efficiently. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/ADRL.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>Attention-aware Deep Reinforcement Learning for Video Face Recognition</papertitle>
-              <br>
-              <strong>Yongming Rao</strong>, Jiwen Lu, Jie Zhou
-              <br>
-              <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2017
-              <br>
-              <a href="http://openaccess.thecvf.com/content_ICCV_2017/papers/Rao_Attention-Aware_Deep_Reinforcement_ICCV_2017_paper.pdf">[PDF]</a>
-              <br>
-              <p> We propose an attention-aware deep reinforcement learning (ADRL) method for video face recognition,
-                which aims to discard the misleading and confounding frames and find the focuses of attentions in face videos for person recognition. </p>
-            </td>
-          </tr>
-
-          <tr>
-            <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/VTree.png' alt="dise">
-            </td>
-            <td width="75%" valign="center">
-              <papertitle>V-tree: Efficient KNN Search on Moving Objects with Road-Network Constraints</papertitle>
-              <br>
-              Bilong Shen, Ying Zhao, Guoliang Li, Weimin Zheng, Yue Qin, Bo Yuan, <strong>Yongming Rao</strong>
-              <br>
-              <em>IEEE International Conference on Data Engineering (<strong>ICDE</strong>)</em>, 2017
-              <br>
-              <a href="https://raoyongming.github.io/files/vtree.pdf">[PDF]</a>
-              <br>
-              <p> We propose a new tree structure for moving objects kNN search with road-network constraints, which can be used in many real-world applications like taxi search.  </p>
-            </td>
-          </tr>
+          
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading>Honors and Awards</heading>
+              <heading>Competition Awards</heading>
               <p>
-                <li style="margin: 5px;"> ECCV 2020 Outstanding Reviewer</li>
+<!--                 <li style="margin: 5px;"> ECCV 2020 Outstanding Reviewer</li> -->
                 <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7 (CVPR 2020)</li>
-                <li style="margin: 5px;"> 2019 CCF-CV Academic Emerging Award (CCF-CV 学术新锐奖)</li>
+<!--                 <li style="margin: 5px;"> 2019 CCF-CV Academic Emerging Award (CCF-CV 学术新锐奖)</li>
                 <li style="margin: 5px;"> 2019 National Scholarship, Tsinghua University </li>
                 <li style="margin: 5px;"> ICME 2019 Best Reviewer Award </li>
                 <li style="margin: 5px;"> 2017 Sensetime Undergraduate Scholarship </li>
                 <li style="margin: 5px;"> 1st place in 17th Electronic Design Contest of Tsinghua University </li>
-                <li style="margin: 5px;"> 1st place in Momenta Lane Detection Challenge </li>
+                <li style="margin: 5px;"> 1st place in Momenta Lane Detection Challenge </li> -->
               </p>
             </td>
           </tr>
@@ -364,16 +224,13 @@
             <heading>Academic Services</heading>
             <p>
               <li style="margin: 5px;"> 
-                <b>Co-organizer:</b> Tutorial on Deep Reinforcement Learning for Computer Vision at CVPR 2019 <a href="http://ivg.au.tsinghua.edu.cn/DRLCV/"> [website]</a>
+                <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
               </li>
               <li style="margin: 5px;"> 
-                <b>Conference Reviewer / Program Committee Member:</b> CVPR 2018/2019/2020/2021, ICML 2019/2020/2021, ICCV 2019/2021, NeurIPS 2019/2020, ICLR 2021, ECCV 2020, AAAI 2020/2021, WACV 2020/2021, ACCV 2018/2020, ICME 2019/2020/2021, ICPR 2018/2020, ICIP 2018/2019
+                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICML, ICCV, NeurIPS and so on.
               </li>
               <li style="margin: 5px;"> 
-                <b>Senior Program Committee Member:</b> IJCAI 2021
-              </li>
-              <li style="margin: 5px;"> 
-                <b>Journal Reviewer:</b>  IJCV, T-IP, T-MM, T-Cybernetics, IEEE Access
+                <b>Journal Reviewer:</b>  TIP, TMM, TCSVT and so on.
               </li>
             </p>
           </td>
@@ -400,7 +257,7 @@
 	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script>
 	  </div>        
 	  <br>
-	    &copy; Yongming Rao | Last updated: Feb 20, 2021
+	    &copy; Guangyi Chen | Last updated: Feb 20, 2021
 </center></p>
 </body>
 
