--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <img style="width:50%;max-width:50%" alt="profile photo" src="images/rym.jpg">
+              <img style="width:50%;max-width:50%" alt="profile photo" src="images/Guangyi_Chen.jpg">
             </td>
           </tr>
         </tbody></table>
@@ -85,7 +85,7 @@
               <br>
               <em>Proceedings of the European Conference on Computer Vision  (<strong>ECCV</strong>)</em>, 2020
               <br>
-              <a href="https://guangyichen.github.io/files/0648.pdf">[PDF]</a>
+              <a href="https://chengy12.github.io/files/0648.pdf">[PDF]</a>
               <br>
               <p></p>
               <p>We show temporal coherence plays a more critical role than temporal motion for video-based person re-identification and develop a Adversarial Feature Augmentation (AFA) to highlight temporal coherence.</p>
@@ -103,7 +103,7 @@
               <br>
               <em>16th European Conference on Computer Vision (<strong>ECCV</strong>)</em>, 2020
               <br>
-              <a href="https://guangyichen.github.io/files/0645.pdf">[PDF]</a>
+              <a href="https://chengy12.github.io/files/0645.pdf">[PDF]</a>
               <br>
               <p></p>
               <p>We propose to adaptively and progressively mine credible training samples to avoid the damage from the noise of predicted pseudo labels for unsupervised domain adaptation person ReID.</p>
@@ -112,7 +112,7 @@
           
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src="images/1040.png" alt="dise">
+              <img style="width:100%;max-width:100%" src="images/1040.PNG" alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Deep Meta Metric Learning</papertitle>
@@ -121,7 +121,7 @@
               <br>
               <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019
               <br>
-              <a href="https://guangyichen.github.io/files/1040_camera_ready_final.pdf">[PDF]</a> <a href="https://github.com/CHENGY12/DMML">[Code]</a> 
+              <a href="https://chengy12.github.io/files/1040_camera_ready_final.pdf">[PDF]</a> <a href="https://github.com/CHENGY12/DMML">[Code]</a> 
               <br>
               <p></p>
               <p>We propose to understand the deep metric learning via meta-learning.</p>
@@ -130,7 +130,7 @@
           
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src="images/1046.png" alt="dise">
+              <img style="width:100%;max-width:100%" src="images/1046.PNG" alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Self-Critical Attention Learning for Person Re-Identification</papertitle>
@@ -139,7 +139,7 @@
               <br>
               <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2019
               <br>
-              <a href="https://guangyichen.github.io/files/1046_camera_ready_final.pdf">[PDF]</a> 
+              <a href="https://chengy12.github.io/files/1046_camera_ready_final.pdf">[PDF]</a> 
               <br>
               <p></p>
               <p>We present a self-critical attention learning method which applies a critic module to examine and surpervise the attention model.</p>
@@ -157,7 +157,7 @@
               <br>
               <em>IEEE Transactions on Image Processing< (<strong>TIP</strong>)</em>, 2020
               <br>
-              <a href="https://guangyichen.github.io/files/TIP-21136-2019R1.pdf">[PDF]</a> 
+              <a href="https://chengy12.github.io/files/TIP-21136-2019R1.pdf">[PDF]</a> 
               <br>
               <p> We propose to recurrently discover the 3D attention regions and use the reinforcement learning for optimization. </p>
             </td>
@@ -175,7 +175,7 @@
               <br>
               <em>IEEE Transactions on Image Processing< (<strong>TIP</strong>)</em>, 2019
               <br>
-              <a href="https://guangyichen.github.io/files/TIP-19329-2018.R2.pdf">[PDF]</a> 
+              <a href="https://chengy12.github.io/files/TIP-19329-2018.R2.pdf">[PDF]</a> 
               <br>
               <p> We propose a spatial-temporal attention to jointly discover the salient clues in both spatial and temporal domain. </p>
             </td>
@@ -183,7 +183,7 @@
 	
 	  <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/ICIP17.jpg.jpg' alt="dise">
+              <img style="width:100%;max-width:100%" src='images/ICIP17.jpg' alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification</papertitle>
@@ -192,7 +192,7 @@
               <br>
               <em>IEEE International Conference on Image Processing< (<strong>ICIP</strong>)</em>, 2017
               <br>
-              <a href="https://guangyichen.github.io/files/Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification.pdf">[PDF]</a> 
+              <a href="https://chengy12.github.io/files/Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification.pdf">[PDF]</a> 
               <br>
               <p> We model each pedestrian video as a point on the Riemannian manifold and learn similarity over these points under the multiple kernel learning framework. </p>
             </td>
