--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <b>2020-7:</b> 2 papers on person re-identification are accepted by <a href="https://eccv2020.eu/">ECCV'2020</a>.
               </li>
               <li style="margin: 5px;" >
-                <b>2020-06:</b> Our team pangpang (I and <a href="https://raoyongming.github.io/">Rongming</a>) won the 2nd place in Semi-Supervised Recognition Challenge at <a href="https://sites.google.com/view/fgvc7">FGVC7</a> (CVPR 2020).
+                <b>2020-06:</b> Our team pangpang (I and <a href="https://raoyongming.github.io/">Yongming</a>) won the 2nd place in Semi-Supervised Recognition Challenge at <a href="https://sites.google.com/view/fgvc7">FGVC7</a> (CVPR 2020).
               </li>
               <li style="margin: 5px;" >
                 <b>2020-05:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
@@ -76,7 +76,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src="images/framework_0648.png" alt="dise">
+              <img style="width:100%;height:60%" src="images/framework_0648.png" alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Temporal Coherence or Temporal Motion: Which is More Critical for Video-based Person Re-identification?</papertitle>
