--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%;height:20%" src="images/framework_0648.png" alt="dise">
+              <img style="width:100%;max-width:100%" src="images/0648.png" alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Temporal Coherence or Temporal Motion: Which is More Critical for Video-based Person Re-identification?</papertitle>
@@ -88,7 +88,7 @@
               <a href="https://chengy12.github.io/files/0648.pdf">[PDF]</a>
               <br>
               <p></p>
-              <p>We show temporal coherence plays a more critical role than temporal motion for video-based person re-identification and develop a Adversarial Feature Augmentation (AFA) to highlight temporal coherence.</p>
+              <p>We show temporal coherence plays a more critical role than temporal motion for video-based person ReID and develop an adversarial feature augmentation to highlight temporal coherence.</p>
             </td>
           </tr>
 
@@ -112,7 +112,7 @@
           
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src="images/1040.PNG" alt="dise">
+              <img style="width:100%;max-width:100%" src="images/motivation_1040.png" alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Deep Meta Metric Learning</papertitle>
@@ -183,7 +183,7 @@
 	
 	  <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
-              <img style="width:100%;max-width:100%" src='images/ICIP17.jpg' alt="dise">
+              <img style="width:100%;max-width:100%" src='images/ICIP17.png' alt="dise">
             </td>
             <td width="75%" valign="center">
               <papertitle>Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification</papertitle>
