--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <p style="text-align:center">
                 <a href="mailto:chen-gy16@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="files/Resume_GuangyiChen.pdf">CV</a> &nbsp/&nbsp
+                <a href="files/Research	Statement.pdf">Research	Statement</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=sAn2eyQAAAAJ&hl=en"> Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/CHENGY12"> Github </a>
               </p>
@@ -43,6 +44,9 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>News</heading>
             <p>
+              <li style="margin: 5px;" >
+                <b>2021-3:</b> 1 paper on unintentional action localization is accepted by <a href="https://2021.ieeeicme.org/">ICME'2021</a>.
+              </li>
               <li style="margin: 5px;" >
                 <b>2020-7:</b> 2 papers on person re-identification are accepted by <a href="https://eccv2020.eu/">ECCV'2020</a>.
               </li>
