--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <p style="text-align:center">
                 <a href="mailto:chen-gy16@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
                 <a href="files/Resume_GuangyiChen.pdf">CV</a> &nbsp/&nbsp
-                <a href="files/Research	Statement.pdf">Research	Statement</a> &nbsp/&nbsp
+                <a href="files/Research_Statement.pdf">Research	Statement</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=sAn2eyQAAAAJ&hl=en"> Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/CHENGY12"> Github </a>
               </p>
