--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+                    <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/icme21.png" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Temporal Label Aggregation for Unintentional Action Localization</papertitle>
+              <br>
+              Nuoxing Zhou, <strong>Guangyi Chen</strong>, Jinglin Xu, and Jiwen Lu
+              <br>
+              <em>2021 IEEE International Conference on Multimedia and Expo  (<strong>ICME</strong>)</em>, 2021
+              <br>
+              <a href="https://chengy12.github.io/files/icme2021_final.pdf">[PDF]</a>
+              <br>
+              <p></p>
+              <p>We formulate the unintentional action localization as a temporal probabilistic regression problem, and propose to online aggregate multiple annotations using an attention model.</p>
+            </td>
+          </tr>
+
           <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
               <img style="width:100%;max-width:100%" src="images/0648.png" alt="dise">
