--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 I am a fifth year Ph.D student in the Department of Automation at Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. In 2016, I obtained my B.Eng. in the Department of Automation, Tsinghua University.
               </p>
               <p>
-              I am broadly interested in computer vision and deep learning. My current research focuses on person re-identification, attention learning and visual reasoning.
+              I am broadly interested in computer vision and deep learning. My current research focuses on attention learning, causal reasoning, video understanding, and person re-identification.
               </p>
               <p style="text-align:center">
                 <a href="mailto:chen-gy16@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
