--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <td width="75%" valign="center">
               <papertitle>Temporal Label Aggregation for Unintentional Action Localization</papertitle>
               <br>
-              Nuoxing Zhou, <strong>Guangyi Chen</strong>, Jinglin Xu, and Jiwen Lu
+              Nuoxing Zhou, <strong>Guangyi Chen</strong>, Jinglin Xu, Weishi Zheng, and Jiwen Lu
               <br>
               <em>2021 IEEE International Conference on Multimedia and Expo  (<strong>ICME</strong>)</em>, 2021
               <br>
