--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <img style="width:50%;max-width:50%" alt="profile photo" src="images/Guangyi_Chen.jpg">
+              <img style="width:50%;max-width:50%" alt="profile photo" src="images/Guangyi_Chen.png">
             </td>
           </tr>
         </tbody></table>
