--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <heading>News</heading>
             <p>
               <li style="margin: 5px;" >
+                <b>2021-7:</b> 1 paper on person re-identification and attention learning is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP'2021</a>.
+              </li>
+              <li style="margin: 5px;" >
                 <b>2021-7:</b> 3 paper on trajectory prediction and attention learning is accepted by <a href="http://iccv2021.thecvf.com/">ICCV'2021</a>.
               </li>
               <li style="margin: 5px;" >
