add apnet in web

--- a/index.html
+++ b/index.html
@@ -84,7 +84,29 @@
           </tr>
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-                    <tr>
+
+
+            <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/apnet.png" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Person Re-identification via Attention Pyramid</papertitle>
+              <br>
+              <strong>Guangyi Chen</strong>, Tianpei Gu, Jiwen Lu, Jin-An Bao, and Jie Zhou
+              <br>
+              <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2021
+              <br>
+              <a href="https://chengy12.github.io/files/TIP-24326-2021R2.pdf">[PDF]</a> <a href="https://chengy12.github.io/files/TIP-24326-2021supp.pdf">[Supp]</a> <a href="https://github.com/CHENGY12/APNet">[Code]</a> 
+              <br>
+              <p></p>
+              <p>We propose attention pyramid networks by the "split-attend-merge-stack" principle to jointly learn the attentions under different scales and obtain superior performance on many person re-identification datasets.
+              </p>
+            </td>
+          </tr>
+
+
+            <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
               <img style="width:100%;max-width:100%" src="images/icme21.png" alt="dise">
             </td>
@@ -183,7 +205,7 @@
               <br>
               <strong>Guangyi Chen</strong>, Jiwen Lu, Ming Yang, and Jie Zhou
               <br>
-              <em>IEEE Transactions on Image Processing< (<strong>TIP</strong>)</em>, 2020
+              <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2020
               <br>
               <a href="https://chengy12.github.io/files/TIP-21136-2019R1.pdf">[PDF]</a> 
               <br>
@@ -201,7 +223,7 @@
               <br>
               <strong>Guangyi Chen</strong>, Jiwen Lu, Ming Yang, and Jie Zhou
               <br>
-              <em>IEEE Transactions on Image Processing< (<strong>TIP</strong>)</em>, 2019
+              <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2019
               <br>
               <a href="https://chengy12.github.io/files/TIP-19329-2018.R2.pdf">[PDF]</a> 
               <br>
@@ -218,7 +240,7 @@
               <br>
              <strong>Guangyi Chen</strong>, Jiwen Lu, Jianjiang Feng, and Jie Zhou
               <br>
-              <em>IEEE International Conference on Image Processing< (<strong>ICIP</strong>)</em>, 2017
+              <em>IEEE International Conference on Image Processing (<strong>ICIP</strong>)</em>, 2017
               <br>
               <a href="https://chengy12.github.io/files/Localized multi-kernel discriminative canonical correlation analysis for video-based person re-identification.pdf">[PDF]</a> 
               <br>
