--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               I am broadly interested in computer vision and deep learning. My current research focuses on attention learning, causal reasoning, video understanding, and person re-identification.
               </p>
               <p style="text-align:center">
-                <a href="mailto:chen-gy16@mails.tsinghua.edu.cn">Email</a> &nbsp/&nbsp
+                <a href="mailto:guangyichen1994.gmail.com">Email</a> &nbsp/&nbsp
                 <a href="files/Resume_GuangyiChen.pdf">CV</a> &nbsp/&nbsp
                 <a href="files/Research_Statement.pdf">Research	Statement</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=sAn2eyQAAAAJ&hl=en"> Google Scholar</a> &nbsp/&nbsp
