--- a/index.html
+++ b/index.html
@@ -85,6 +85,62 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          
+          <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/causal.png" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Counterfactual Attention Learning for Fine-Grained Visual Categorization and Re-identification</papertitle>
+              <br>
+              <strong>Guangyi Chen</strong>, Junlong Li, Jiwen Lu and Jie Zhou
+              <br>
+              <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2021
+              <br>
+              <a href="https://arxiv.org/pdf/2107.14202.pdf">[Arxiv]</a> <a href="https://github.com/CHENGY12/CausalHTP">[Code]</a>
+              <br>
+              <p></p>
+              <p>we propose a counterfactual analysis method for human trajectory prediction to investigate the causality between the predicted trajectories and input clues and alleviate the negative effects brought by environment bias.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/model_dis.png" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Personalized Trajectory Prediction via Distribution Discrimination</papertitle>
+              <br>
+              <strong>Guangyi Chen</strong>, Junlong Li, Nuoxing Zhou, Liangliang Ren, and Jiwen Lu
+              <br>
+              <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2021
+              <br>
+              <a href="https://arxiv.org/pdf/2107.14204.pdf">[Arxiv]</a> <a href="https://github.com/CHENGY12/DisDis">[Code]</a>
+              <br>
+              <p></p>
+              <p> we present a distribution discrimination (DisDis) method to predict personalized motion patterns by distinguishing the potential distributions in a self-supervised manner.</p>
+            </td>
+          </tr>
+
+
+
+          <tr>
+            <td style="padding:20px;width:30%;max-width:30%" align="center">
+              <img style="width:100%;max-width:100%" src="images/CAL.png" alt="dise">
+            </td>
+            <td width="75%" valign="center">
+              <papertitle>Counterfactual Attention Learning for Fine-Grained Visual Categorization and Re-identification</papertitle>
+              <br>
+              <strong>Yongming Rao*</strong>, Guangyi Chen*, Jiwen Lu and Jie Zhou
+              <br>
+              <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2021
+              <br>
+              <a href="https://arxiv.org/abs/2108.08728">[Arxiv]</a> <a href="https://github.com/raoyongming/CAL">[Code]</a>
+              <br>
+              <p></p>
+              <p>We propose to learn the attention with counterfactual causality, which provides a tool to measure the attention quality and a powerful supervisory signal to guide the learning process.</p>
+            </td>
+          </tr>
 
             <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
