--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <a href="https://arxiv.org/pdf/2107.14202.pdf">[Arxiv]</a> <a href="https://github.com/CHENGY12/CausalHTP">[Code]</a>
               <br>
               <p></p>
-              <p>we propose a counterfactual analysis method for human trajectory prediction to investigate the causality between the predicted trajectories and input clues and alleviate the negative effects brought by environment bias.</p>
+              <p>We propose a counterfactual analysis method for human trajectory prediction to investigate the causality between the predicted trajectories and input clues and alleviate the negative effects brought by environment bias.</p>
             </td>
           </tr>
 
@@ -118,7 +118,7 @@
               <a href="https://arxiv.org/pdf/2107.14204.pdf">[Arxiv]</a> <a href="https://github.com/CHENGY12/DisDis">[Code]</a>
               <br>
               <p></p>
-              <p> we present a distribution discrimination (DisDis) method to predict personalized motion patterns by distinguishing the potential distributions in a self-supervised manner.</p>
+              <p> We present a distribution discrimination (DisDis) method to predict personalized motion patterns by distinguishing the potential distributions in a self-supervised manner.</p>
             </td>
           </tr>
 
