--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <img style="width:100%;max-width:100%" src="images/causal.png" alt="dise">
             </td>
             <td width="75%" valign="center">
-              <papertitle>Counterfactual Attention Learning for Fine-Grained Visual Categorization and Re-identification</papertitle>
+              <papertitle>Human Trajectory Prediction via Counterfactual Analysis</papertitle>
               <br>
               <strong>Guangyi Chen</strong>, Junlong Li, Jiwen Lu and Jie Zhou
               <br>
@@ -287,7 +287,7 @@
             </td>
           </tr>
 	
-	  <tr>
+<!-- 	  <tr>
             <td style="padding:20px;width:30%;max-width:30%" align="center">
               <img style="width:100%;max-width:100%" src='images/ICIP17.png' alt="dise">
             </td>
@@ -302,7 +302,7 @@
               <br>
               <p> We model each pedestrian video as a point on the Riemannian manifold and learn similarity over these points under the multiple kernel learning framework. </p>
             </td>
-          </tr>
+          </tr> -->
 
           
 
