--- a/index.html
+++ b/index.html
@@ -19,16 +19,19 @@
               <p style="text-align:center">
                 <name>Guangyi Chen</name>
               </p>
-              <p> 
-                I am a fifth year Ph.D student in the Department of Automation at Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. In 2016, I obtained my B.Eng. in the Department of Automation, Tsinghua University.
+              <p>
+                I am currently a Postdoctoral Research Fellow in CMU and MBZUAI, working with Prof. Kun Zhang <a href="https://www.andrew.cmu.edu/user/kunz1/">. I am broadly interested in computer vision and machine learning. My current research focuses on video understanding, person re-identification and trajectory prediction in CV, and causality and representation learning in ML.
               </p>
               <p>
-              I am broadly interested in computer vision and deep learning. My current research focuses on attention learning, causal reasoning, video understanding, and person re-identification.
+              	Prior to that, I received my Ph.D degree at Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. In 2016, I obtained my B.Eng. in the Department of Automation, Tsinghua University.
+              </p>
+              <p>
+              	If you are interested in my work and want to join us, please do not hesitate to drop me an email with your resume.
               </p>
               <p style="text-align:center">
                 <a href="mailto:guangyichen1994.gmail.com">Email</a> &nbsp/&nbsp
                 <a href="files/Resume_GuangyiChen.pdf">CV</a> &nbsp/&nbsp
-                <a href="files/Research_Statement.pdf">Research	Statement</a> &nbsp/&nbsp
+                <!-- <a href="files/Research_Statement.pdf">Research	Statement</a> &nbsp/&nbsp -->
                 <a href="https://scholar.google.com/citations?user=sAn2eyQAAAAJ&hl=en"> Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/CHENGY12"> Github </a>
               </p>
