--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <name>Guangyi Chen</name>
               </p>
               <p>
-                I am currently a Postdoctoral Research Fellow in CMU and MBZUAI, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on video understanding, person re-identification and trajectory prediction in CV, and causality and representation learning in ML.
+                I am currently a Postdoctoral Research Fellow in CMU and MBZUAI, working with Prof. <a href="https://www.andrew.cmu.edu/user/kunz1/"> Kun Zhang </a>. I am broadly interested in computer vision and machine learning. My current research focuses on causality and representation learning in ML, and video understanding, person re-identification and trajectory prediction in CV.
               </p>
               <p>
               	Prior to that, I received my Ph.D degree at Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. In 2016, I obtained my B.Eng. in the Department of Automation, Tsinghua University.
