--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="mailto:guangyichen1994.gmail.com">Email</a> &nbsp/&nbsp
                 <a href="files/Resume_GuangyiChen.pdf">CV</a> &nbsp/&nbsp
                 <!-- <a href="files/Research_Statement.pdf">Research	Statement</a> &nbsp/&nbsp -->
-                <a href="https://scholar.google.com/citations?user=sAn2eyQAAAAJ&hl=en"> Google Scholar</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=3lr1jTgAAAAJ"> Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/CHENGY12"> Github </a>
               </p>
             </td>
@@ -336,7 +336,7 @@
                 <b>Co-organizer:</b> for the ICME 2019 workshop: The Third Workshop on Human Identification in Multimedia (HIM'19) <a href="http://ivg.au.tsinghua.edu.cn/him19/"> [website]</a>
               </li>
               <li style="margin: 5px;"> 
-                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICML, ICCV, NeurIPS and so on.
+                <b>Conference Reviewer / Program Committee Member:</b> CVPR, ICCV, ICML, NeurIPS, ICLR and so on.
               </li>
               <li style="margin: 5px;"> 
                 <b>Journal Reviewer:</b>  TIP, TMM, TCSVT and so on.
@@ -366,7 +366,7 @@
 	  <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=yp3s8rdiQW_pbzmBOzWDx2Fv6afIlEpV-k1EZiYIkEY"></script>
 	  </div>        
 	  <br>
-	    &copy; Guangyi Chen | Last updated: Feb 20, 2021
+	    &copy; Guangyi Chen | Last updated: Feb 04, 2022
 </center></p>
 </body>
 
