--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <heading>News</heading>
             <p>
               <li style="margin: 5px;" >
+                <b>2021-11:</b> I give a talk at <a href="https://www.epfl.ch/en/">EPFL</a> to introduce using causal inference for computer vision task <a href="https://chengy12.github.io/files/Talk of Causility in CV.pdf">[slides]</a>, thanks Yuejiang for the invitation!
+              </li>
+              <li style="margin: 5px;" >
                 <b>2021-7:</b> 1 paper on person re-identification and attention learning is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP'2021</a>.
               </li>
               <li style="margin: 5px;" >
