--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <b>2021-11:</b> I give a talk at <a href="https://www.epfl.ch/en/">EPFL</a> to introduce using causal inference for computer vision task <a href="https://chengy12.github.io/files/Talk of Causility in CV.pdf">[slides]</a>, thanks <a href="https://sites.google.com/view/yuejiangliu/home">Yuejiang</a> for the invitation!
               </li>
               <li style="margin: 5px;" >
-                <b>2021-7:</b> 1 paper on person re-identification and attention learning is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP'2021</a>.
+                <b>2021-7:</b> 1 paper on person re-identification and attention learning is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
               </li>
               <li style="margin: 5px;" >
                 <b>2021-7:</b> 3 paper on trajectory prediction and attention learning is accepted by <a href="http://iccv2021.thecvf.com/">ICCV'2021</a>.
