--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/38a0ffb475.js" crossorigin="anonymous"></script>
     <title>Guangyi Chen's Homepage</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
     <!-- <script src="https://kit.fontawesome.com/38a0ffb475.js" crossorigin="anonymous"></script>
 Reflux Template
 https://templatemo.com/tm-531-reflux
