--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-531-reflux
                             <li><a href="#section2">My Research</a></li>
                             <li><a href="#section3">Publications</a></li>
                             <li><a href="#section4">Teaching</a></li>
-                            <li><a href="#section5">Services</a></li>
+                            <li><a href="#section5">Academic Activities</a></li>
                         </ul>
                     </nav>
                     <div class="social-network">
@@ -579,9 +579,9 @@ https://templatemo.com/tm-531-reflux
         <section class="section services" data-section="section5">
             <div class="container">
                 <div class="section-heading">
-                    <h2>Services</h2>
+                    <h2>Academic Activities</h2>
                     <div class="line-dec"></div>
-                    <h3>Competition Awards</h3>
+                    <h3>Competitions</h3>
                     <div class="left">
                         <p>
                             <li style="margin: 5px;"> 2nd place in Semi-Supervised Recognition Challenge at FGVC7 (CVPR 2020)</li>
