--- a/index.html
+++ b/index.html
@@ -53,17 +53,16 @@ https://templatemo.com/tm-531-reflux
                     <div class="social-network">
                         <ul class="soial-icons">
                             <li>
-                                <a href="https://github.com/CHENGY12"><i class="fa-brands fa-github"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://scholar.google.com/citations?hl=zh-CN&user=3lr1jTgAAAAJ"><i class="ai ai-google-scholar-square"></i></a>
-                            </li>
-                            <li>
-                                <a href="mailto:guangyichen1994.gmail.com"><i class="fa fa-envelope"></i></a>
+                                <a href="mailto:guangyichen1994@gmail.com"><i class="fa fa-envelope"></i></a>
                             </li>
                             <li>
                                 <a href="files/Resume_GuangyiChen.pdf"><i class="ai ai-cv"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/CHENGY12"><i class="fa-brands fa-github"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://scholar.google.com/citations?hl=zh-CN&user=3lr1jTgAAAAJ"><i class="ai ai-google-scholar-square"></i></a>
                             </li>
                             <!--       <li>
                   <a href="#"><i class="ai ai-google-scholar-square ai-2x"></i></a>
@@ -89,7 +88,7 @@ https://templatemo.com/tm-531-reflux
                             Prior to that, I received my Ph.D degree at Tsinghua University, advised by Prof. <a href="http://www.au.tsinghua.edu.cn/info/1110/1583.htm"> Jie Zhou </a> and Prof. <a href="http://ivg.au.tsinghua.edu.cn/Jiwen_Lu/"> Jiwen Lu </a>. In 2016, I obtained my B.Eng. in the Department of Automation, Tsinghua University.
                         </p>
                         <p>
-                            If you are interested in my work and want to join us, please do not hesitate to drop me an email with your resume.
+                            If you are interested in our work and want to join us, please do not hesitate to drop me an email, <a href="mailto:guangyichen1994@gmail.com"> guangyichen1994(at)gmail.com </a>, with your resume.
                         </p>
                     </div>
                 </div>
