--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@ https://templatemo.com/tm-531-reflux
                     <h2>News</h2>
                     <div class="line-dec"></div>
                     <div class="news">
-                        <p>
+                        <p> 
+                            <li style="margin: 5px;">
+                                <b>2022-03:</b> 1 paper is accepted by <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83">TIP</a>.
+                            </li>
+                            <li style="margin: 5px;">
+                                <b>2022-03:</b> 3 paper is accepted by <a href="https://cvpr2022.thecvf.com/">CVPR'2022</a>.
+                            </li>
                             <li style="margin: 5px;">
                                 <b>2021-11:</b> Our python package for causal discovery <a href="https://causal-learn.readthedocs.io/en/latest/">causal-learn</a> is released. Any feedback is welcome.
                             </li>
@@ -219,6 +225,33 @@ https://templatemo.com/tm-531-reflux
                             <div class="isotope-box">
                                 <div class="isotope-item" data-type="trajectory">
                                     <figure class="snip1321">
+                                        <img src="assets/images/mid.jpg" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>Stochastic Trajectory Prediction via Motion Indeterminacy Diffusion</h4>
+                                            <span>We propose a new framework to formulate the trajectory prediction task as a reverse process of motion indeterminacy diffusion, in which we progressively discard indeterminacy from all the walkable areas until reaching the desired trajectory.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+<!--                                 <div class="isotope-item" data-type="trajectory">
+                                    <figure class="snip1321">
+                                        <img src="assets/images/denseclip.jpg" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>DenseCLIP: Language-Guided Dense Prediction with Context-Aware Prompting</h4>
+                                            <span>DenseCLIP is a new framework for dense prediction by implicitly and explicitly leveraging the pre-trained knowledge from CLIP.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div> -->
+                                <div class="isotope-item" data-type="action">
+                                    <figure class="snip1321">
+                                        <img src="assets/images/finediving.png" alt="sq-sample26" />
+                                        <figcaption>
+                                            <h4>FineDiving: A Fine-grained Dataset for Procedure-aware Action Quality Assessment</h4>
+                                            <span>We construct a new fine-grained dataset for the explainable action quality assessment, named FineDiving, developed on diverse diving events with detailed annotations on action procedures.</span>
+                                        </figcaption>
+                                    </figure>
+                                </div>
+                                <div class="isotope-item" data-type="trajectory">
+                                    <figure class="snip1321">
                                         <img src="assets/images/causal.png" alt="sq-sample26" />
                                         <figcaption>
                                             <!-- <a href="assets/images/causal.png" data-lightbox="image-1" data-title="Caption"><i class="fa fa-search"></i></a> -->
@@ -322,12 +355,84 @@ https://templatemo.com/tm-531-reflux
                             <tbody>
                                 <tr>
                                     <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/mid.jpg" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>Stochastic Trajectory Prediction via Motion Indeterminacy Diffusion</papertitle>
+                                        <br>
+                                        Tianpei Gu*, <strong>Guangyi Chen*</strong>, Junlong Li, Chunze Lin, Yongming Rao, Jie Zhou, and Jiwen Lu
+                                        <br>
+                                        <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022
+                                        <br>
+                                        <a href="https://arxiv.org/pdf/2203.13777.pdf">[Arxiv]</a> <a href="https://github.com/gutianpei/MID">[Code]</a>
+                                        <br>
+                                        <p></p>
+                                        <p>We propose a new framework to formulate the trajectory prediction task as a reverse process of motion indeterminacy diffusion, in which we progressively discard indeterminacy from all the walkable areas until reaching the desired trajectory.</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/denseclip.jpg" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>DenseCLIP: Language-Guided Dense Prediction with Context-Aware Prompting</papertitle>
+                                        <br>
+                                        Yongming Rao, Wenliang Zhao, <strong>Guangyi Chen</strong>, Yansong Tang, Zheng Zhu, Guan Huang, Jie Zhou, and Jiwen Lu
+                                        <br>
+                                        <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022
+                                        <br>
+                                        <a href="https://arxiv.org/pdf/2112.01518.pdf">[Arxiv]</a> <a href="https://github.com/raoyongming/DenseCLIP">[Code]</a> <a href="https://denseclip.ivg-research.xyz">[Project]</a>
+                                        <br>
+                                        <p></p>
+                                        <p>DenseCLIP is a new framework for dense prediction by implicitly and explicitly leveraging the pre-trained knowledge from CLIP.</p>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/finediving.png" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>FineDiving: A Fine-grained Dataset for Procedure-aware Action Quality Assessment</papertitle>
+                                        <br>
+                                        Jinglin Xu*, Yongming Rao*, Xumin Yu, <strong>Guangyi Chen</strong>, Jie Zhou, and Jiwen Lu
+                                        <br>
+                                         <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>)</em>, 2022
+                                        <br>
+                                        <a href="https://chengy12.github.io/files/02729.pdf">[PDF]</a> <a href="https://github.com/xujinglin/FineDiving">[Code]</a> <a href="https://sites.google.com/view/finediving">[Project]</a>
+                                        <br>
+                                        <p></p>
+                                        <p>We propose a counterfactual analysis method for human trajectory prediction to alleviate the negative effects brought by environment bias.</p>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
+                                        <img style="width:100%;max-width:100%" src="assets/images/tip2022a.jpg" alt="dise">
+                                    </td>
+                                    <td width="75%" valign="center">
+                                        <papertitle>Probabilistic Temporal Modeling for Unintentional Action Localization</papertitle>
+                                        <br>
+                                        Jinglin Xu*, <strong>Guangyi Chen*</strong>, Jiwen Lu, and Jie Zhou
+                                        <br>
+                                        <em>IEEE Transactions on Image Processing (<strong>TIP</strong>)</em>, 2022
+<!--                                         <br>
+                                        <a href="https://chengy12.github.io/files/TIP-24326-2021R2.pdf">[PDF]</a> 
+                                        <br> -->
+                                        <p></p>
+                                        <p>We propose a probabilistic framework for unintentional action localization, in which we model the uncertainty of annotations with temporal label aggregation and use it for training a dense probabilistic localization model.
+                                        </p>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td style="padding:20px;width:30%;max-width:30%" align="center">
                                         <img style="width:100%;max-width:100%" src="assets/images/causal.png" alt="dise">
                                     </td>
                                     <td width="75%" valign="center">
                                         <papertitle>Human Trajectory Prediction via Counterfactual Analysis</papertitle>
                                         <br>
-                                        <strong>Guangyi Chen</strong>, Junlong Li, Jiwen Lu and Jie Zhou
+                                        <strong>Guangyi Chen</strong>, Junlong Li, Jiwen Lu, and Jie Zhou
                                         <br>
                                         <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2021
                                         <br>
@@ -361,7 +466,7 @@ https://templatemo.com/tm-531-reflux
                                     <td width="75%" valign="center">
                                         <papertitle>Counterfactual Attention Learning for Fine-Grained Visual Categorization and Re-identification</papertitle>
                                         <br>
-                                        <strong>Yongming Rao*</strong>, Guangyi Chen*, Jiwen Lu and Jie Zhou
+                                        Yongming Rao*, <strong>Guangyi Chen*</strong>, Jiwen Lu and Jie Zhou
                                         <br>
                                         <em>IEEE International Conference on Computer Vision (<strong>ICCV</strong>)</em>, 2021
                                         <br>
